--- a/css/site.css
+++ b/css/site.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Roboto:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@700&family=Roboto:wght@100;400&display=swap');
 
 @font-face {
   font-family: 'Jedi';
@@ -42,6 +42,15 @@ footer {
 main {
   flex-grow: 1;
   display: flex;
+  margin: 2rem;
+}
+
+button {
+  border-width: 0;
+  border-radius: 8px;
+  color: #fff;
+  padding: .5rem 2rem;
+  font-size: 1.5rem;
 }
 
 #loadingModal {
@@ -64,25 +73,40 @@ main {
   flex-direction: column;
 }
 
-button {
-  border-width: 0;
-  border-radius: 8px;
+#details-container {
+  border-radius: 16px;
+  margin: auto;
+  align-self: center;
+  display: none;
+  flex-direction: column;
   color: #fff;
-  padding: .5rem 2rem;
-  font-size: 1.5rem;
+  padding: 3rem;
+}
+
+#details-container td {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  padding: 0 2rem 1rem 0;
+}
+
+#details-container td {
+  text-transform: capitalize;
+}
+
+#details-container .label {
+  font-weight: 400;
 }
 
 #people-nav {
   display: flex;
   justify-content: space-between;
-  padding: 0 2rem;
+  padding: 2rem 0 0 0;
 }
 
 #people-container {
   flex-grow: 1;
   display: grid;
   gap: 2rem;
-  padding: 2rem;
   grid-template-columns: repeat(5, 1fr);
 }
 
