--- a/css/site.css
+++ b/css/site.css
@@ -7,6 +7,7 @@
 
 :root {
   --trans-bg: rgba(255, 255, 255, 0.123);
+  --sw-yellow: #fbea04;
 }
 
 html {
@@ -25,7 +26,7 @@ body {
 h1 {
   font-family: Jedi, sans-serif;
   margin: 0;
-  color: #fbea04;
+  color: var(--sw-yellow);
   font-size: 4vw;
   letter-spacing: .25vw;
   text-align: center;
@@ -33,6 +34,8 @@ h1 {
 
 footer {
   font-family: 'Roboto', sans-serif;
+  font-weight: 100;
+  font-size: .8rem;
   text-align: center;
   color: #fff;
   padding: .3rem;
@@ -80,7 +83,7 @@ button {
   display: none;
   flex-direction: column;
   color: #fff;
-  padding: 3rem;
+  padding: 0 3rem 3rem 3rem;
 }
 
 #details-container td {
@@ -97,6 +100,10 @@ button {
   font-weight: 400;
 }
 
+#details-container > h2 {
+  padding-right: 1.5rem;
+}
+
 #people-nav {
   display: flex;
   justify-content: space-between;
@@ -108,6 +115,12 @@ button {
   display: grid;
   gap: 2rem;
   grid-template-columns: repeat(5, 1fr);
+}
+
+.btn-close {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
 }
 
 .person-card {
@@ -136,6 +149,10 @@ button {
 
 @media screen and (max-width: 768px) {
   #people-container {
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
+  }
+
+  .person-card {
+    min-height: 200px;
   }
 }
