--- a/css/site.css
+++ b/css/site.css
@@ -20,8 +20,8 @@ body {
   margin: 0;
   display: flex;
   flex-direction: column;
-  background-image: url('../img/starry-sky-2675322-2560-blur.webp');
-  background-position: center;
+  /* background-image: url('../img/starry-sky-2675322-2560-blur.webp');
+  background-position: center; */
 }
 
 h1 {
